<resources>
    <string name="app_name">FaceU</string>
    <string name="open_the_camera">Open the Camera</string>
    <string name="camera">Camera</string>
    <string name="start_analyze">Start analyze</string>
    <string name="keep_your_face_in_the_camera">Keep your face in the camera</string>
    <string name="halo">Halo,</string>
    <string name="name">name</string>
    <string name="pluss">pluss</string>
    <string name="analysis_preview">Analysis Preview</string>
    <string name="scan_ingredients">Scan ingredients</string>
    <string name="scan_your_face">Scan your face</string>
    <string name="open_the_camera_bck">Open the Camera</string>
    <string name="camera_bck">Camera</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="photos">photos</string>
    <string name="analyze">Analyze</string>
    <string name="add_more_description">Add more description</string>
    <string name="scan_again">Scan Again</string>
    <string name="tell_us_about_your_product">Tell us about your product</string>
    <string name="please_write_as_many_characteristics_about_your_product_as_possible">Please write as many characteristics about your product as possible</string>
    <string name="analyze_bck">Analyze</string>
    <string name="keep_your_face_in_the_camera_bck">Keep the ingredients in the camera</string>
    <string name="halo_bck">Halo,</string>
    <string name="name_bck">name!</string>
    <string name="pluss_bck">pluss</string>
    <string name="analyze_preview">Analyze Preview</string>
    <string name="textview">TextView</string>
    <string name="product_info">Product Info</string>
    <string name="textview_makan_adalah_keyika_kamu_merasa_akan_bisa_melakukan">TextView makan adalah keyika kamu merasa akan bisa melakukan</string>
    <string name="history_face">History face</string>
    <string name="history_ingredients">History ingredients</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="textview_bck">TextView</string>
    <string name="textview_bckk">TextView</string>
    <string name="textview_bckkk">TextView</string>
    <string name="button">Register</string>
    <string name="textviewbckk">Already have an account?</string>
    <string name="ini_adalah_wajahku_belakangan_ini_tolong_semuanya_bantu_aku">Ini adalah wajahku belakangan ini tolong semuanya bantu aku...</string>
    <string name="label">Label</string>
    <string name="ini_adalah_wajahku_belakangan_ini_tolong_semuanya_aku_mengalami_musibah_pad_akuli">ini adalah wajahku belakangan ini tolong semuanya.... aku mengalami musibah pad akuli</string>
    <string name="_08_06_2023_nck">08-06-2023</string>
    <string name="choose_a_photo_bck">Choose a photo</string>
    <string name="photos_bck">photos</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="gallery">GALLERY</string>
    <string name="submit">SUBMIT</string>
    <string name="preview_picture">Preview Picture\n</string>
    <string name="unknown">Unknown</string>
    <string name="face_info">Face Info</string>
    <string name="description">Description</string>
    <string name="causes">Causes</string>
    <string name="prevention">Prevention</string>
    <string name="recommend">Recommended Ingredients for Skincare Use</string>
    <string name="treatment">Treatment</string>
    <string name="default_result">"We can't identify your face problem"</string>
    <string name="acne">Acne is a common skin condition that happens when hair follicles under the skin become clogged. Sebum(oil) that helps keep skin from drying out and dead skin cells plug the pores, which leads to outbreaks of lesions, commonly called pimples or zits. Most often, the outbreaks occur on the face but can also appear on the back, chest, and shoulders.

\n\nAcne is an inflammatory disorder of the skin, which has sebaceous (oil) glands that connects to the hair follicle, which contains fine hair. In healthy skin, the sebaceous glands make sebum that empties onto the skin surface through the pore, which is an opening in the follicle. Keratinocytes, a type of skin cell, line the follicle.  Normally as the body sheds skin cells, the keratinocytes rise to the surface of the skin. When someone has acne, the hair, sebum, and keratinocytes stick together inside the pore. This prevents the keratinocytes from shedding and keeps the sebum from reaching the surface of the skin. The mixture of oil and cells allows bacteria that normally live on the skin to grow in the plugged follicles and cause inflammation—swelling, redness, heat, and pain. When the wall of the plugged follicle breaks down, it spills the bacteria, skin cells, and sebum into nearby skin, creating lesions or pimples.
</string>
    <string name="dark_spot">Dark spots are the result of the overproduction or collection of melanin, a skin pigment that makes skin darker. Dark spots are generally harmless. Even when the spots aren\'t dangerous, if they bother you, they can often be lightened or removed. Dark spots commonly occur as people age. They are often the result of past sun exposure. But they can also be due to some skin conditions, medications, and certain medical conditions.

\n\nSpots on the skin can range from light to dark brown or black in color. They are flat and generally oval-shaped. Dark spots can develop anywhere. But they are most likely to appear on parts of the body that receive the most sun exposure. Even so, some people choose to have them removed for cosmetic reasons.
</string>
    <string name="normal">"Congratulations, you have healthy skin!!!"</string>
    <string name="redness">"Red facial skin always indicates increased circulation in the skin's blood vessels, especially in the fine capillary network. It may also indicate inflammation in the facial skin.
\n1. If the red flushed skin is simply due to increased circulation in the blood vessels (i.e. blushing) you know it will pass.
\n2. If inflammation is involved then the solution is more complex.
"</string>
    <string name="wrinkle">"Wrinkles, a natural part of aging, are most prominent on sun-exposed skin, such as the face, neck, hands and forearms. Although genetics mainly determine skin structure and texture, sun exposure is a major cause of wrinkles, especially for people with light skin. Pollutants and smoking also contribute to wrinkling."</string>
    <string name="acne_causes">
        1. Excess or high production of oil in the pore.
\n2. Buildup of dead skin cells in the pore.
\n3. Damaged skin barrier
\n4. Growth of bacteria in the pore.
\n5. Stress
\n6. Pollution
    </string>
    <string name="dark_spot_causes">
        1. Exposure to UV Light
\n2. Overproduction or collection of melanin
\n3. Damage from free radicals that attack healthy cells and eventually cause skin to appear aged
    </string>
    <string name="redness_causes">
        1. Sunburn
\n2. Rosacea
\n3. Eczema
\n4. Acne
\n5. Seborrheic dermatitis
    </string>
    <string name="wrinkles_causes">
        1. Age
\n2. Exposure to UV Light
\n3. Repeated Facial Expressions
\n4. Smoking
    </string>
    <string name="acne_prevention">
        1. Clean your skin gently. \n\nUse a mild cleanser in the morning, in the evening, and after heavy exercise. Try to avoid using strong soaps, astringents, or rough scrub pads. Rinse your skin with lukewarm water.
\n\n2. Shampoo your hair regularly. \n\nIf you have oily hair, you may want to wash it every day.
Avoid rubbing and touching skin lesions. Squeezing or picking blemishes can cause scars or dark blotches to develop.
\n\n3. Use sunscreen, and avoid sunburn and suntan. \n\nMany of the medicines used to treat acne can make you more prone to sunburn.
\n\n4. Choose cosmetics carefully. \n\nAll cosmetics and hair care products should be oil free. Choose products labeled noncomedogenic, which means they do not clog pores. In some people, however, even these products may make acne worse.
    </string>
    <string name="dark_spot_prevention">
        1.Use SPF: Be diligent about wearing and reapplying sunscreen every two hours.18 Reapply more frequently if you\'ve been swimming or sweating a lot.
\n\n2. Cover up: When outdoors, wear a hat, long sleeves, and pants. SPF fabrics can offer added protection.
\n\n3. Avoid peak sun hours: UV exposure is usually greatest between the hours of 10 a.m. to 2 p.m.
    </string>
    <string name="redness_prevention">
        1. Using good mineral broad spectrum SPF sunscreen is important to reduce redness.
\n\n2. Hydrate skin using a healing face cream applied twice daily to restore the sensitive skin barrier and prevent flare-ups.
    </string>
    <string name="wrinkles_prevention">
        1. Protect your skin from the sun
\n\nLimit the time you spend in the sun, especially midday, and always wear protective clothing, such as wide-brimmed hats, long-sleeved shirts and sunglasses. Also, use sunscreen year-round when outdoors.
\n\n2. Moisturize
\n\nDry skin shrivels plump skin cells, which can lead to premature fine lines and wrinkles. Moisturizing traps water in your skin, which helps mask tiny lines and creases. It may take a few weeks of regular use of the product before you notice any improvement in your skin.
\n\n3. Don\'t smoke
\n\nEven if you\'ve smoked for years or smoke heavily, you can still improve your skin tone and texture and prevent wrinkles by quitting smoking.
\n\n4. Eat a healthy diet
\n\nThere is some evidence that certain vitamins in your diet help protect your skin. More study is needed on the role of nutrition, but it\'s good to eat plenty of fruits and vegetables.
    </string>
    <string name="acne_recommend">
1. Benzoyl peroxide
\n2. Retinoids (Vitamin A)
\n3. Salicylic Acid
\n4. Sulfur
\n5. Azelaic Acid

    </string>
    <string name="dark_spot_recommend">
1. Alpha Hydroxy Acid (AHA)
\n2. Hydroquinone (should be used by prescription doctor)
\n3. Glycolic Acid
\n4. Kojic Acid
\n5. Vitamin C

    </string>
    <string name="redness_recommend">
1. Aloe
\n2. Green tea
\n3. Ceramides
\n4. Glycerin
\n5. Squalane

    </string>
    <string name="wrinkles_recommend">
        1. Retinol
\n2. Alpha Hydroxy Acid (AHA)
\n3. Tretinoin
\n4. Glycolic Acid
    </string>
    <string name="acne_treatment">
        1. Light therapy
\n\nA variety of light-based therapies have been tried with some success. Most will require multiple visits to your doctor\'s office. Further study is needed to determine the ideal method, light source and dose.
\n\n2. Chemical peel
\n\nThis procedure uses repeated applications of a chemical solution, such as salicylic acid, glycolic acid or retinoic acid. This treatment is for mild acne. It might improve the appearance of the skin, though the change is not long lasting and repeat treatments are usually needed.
\n\n3. Steroid injection
\n\nNodular and cystic lesions can be treated by injecting a steroid drug into them. This therapy has resulted in rapid improvement and decreased pain. Side effects may include skin thinning and discoloration in the treated area.
    </string>
    <string name="logo">logo</string>
</resources>