<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:context=".ui.FaceResultActivity">

        <LinearLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_camera_pink"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analysis_preview"
                android:textSize="24sp"
                android:textColor="#F2B2F0"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/ic_home_bck" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_result"
            android:layout_width="180dp"
            android:layout_height="180dp"
            tools:src="@tools:sample/avatars"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/action_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_face_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/face_info"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_result"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_face_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_desc_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Hello World!"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_causes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/causes"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_res"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_causes_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            tools:text="Hello World!"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_causes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_prevention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/prevention"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/tv_causes_res"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_prevent_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            tools:text="Hello World!"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_prevention"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_recommend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/recommend"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/tv_prevent_res"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_rec_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            tools:text="Hello World!"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_recommend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/treatment"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/tv_rec_res"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_treat_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            tools:text="Hello World!"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_treatment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="110dp"
            android:src="@drawable/faceu_logo"
            android:contentDescription="@string/logo"
            app:layout_constraintTop_toBottomOf="@id/tv_treat_res"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
